<resources>
    <string name="app_name">M4_Individual11</string>
    <string name="turn_off_flight_mode">Turn off flight mode</string>
    <string name="updating_profile">Updating profile</string>
    <string name="picture_saved">Picture saved to gallery</string>
    <string name="unlocked_level">Unlocked level 5</string>
    <string name="level_completed">Level 4 completed</string>
    <string name="music_paused">Music paused</string>
</resources>