<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:backgroundTint="#D9525E"
        android:text="@string/updating_profile"
        android:textSize="18sp"
        app:icon="@drawable/baseline_autorenew_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#484D50"
        android:text="@string/unlocked_level"
        android:textColor="#51DABA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#5F94D9"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:drawableRight="@android:drawable/btn_star_big_on"
        android:text="@string/level_completed"
        android:textSize="14sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_flight_mode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_flight_mode"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#C9C9C9"
        android:text="@string/picture_saved"
        android:textColor="#DC3636"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/btn_flight_mode"
        app:layout_constraintTop_toBottomOf="@+id/btn_flight_mode" />

    <Button
        android:id="@+id/btn_flight_mode"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:backgroundTint="#7559D9"
        android:text="@string/turn_off_flight_mode"
        android:textSize="18sp"
        app:icon="@drawable/baseline_airplanemode_inactive_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/button6"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#49A660"
        android:text="@string/music_paused"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:icon="@drawable/baseline_pause_circle_24"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="291dp"
        android:layout_height="242dp"
        app:tint="#40CA48"
        android:translationX="-75dp"
        android:translationY="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/andy" />
</androidx.constraintlayout.widget.ConstraintLayout>